# advent-of-code

./: .gitignore  README.md  template.rs
2020/: Cargo.toml  README_SETUP.md  new_day.sh  setupday.py
2020/day01/src/: main.rs
2020/day02/src/: main.rs
2020/src/: lib.rs
2021/: Cargo.toml  README.md
2021/day01/: Cargo.toml
2021/day01/src/: main.rs
2021/day02/: Cargo.toml
2021/day02/src/: main.rs
2021/day03/: Cargo.toml
2021/day03/src/: main.rs
2021/day04/: Cargo.toml
2021/day04/src/: main.rs
2021/day05/: Cargo.toml
2021/day05/src/: main.rs
2021/day06/: Cargo.toml
2021/day06/src/: main.rs
2021/day07/: Cargo.toml
2021/day07/src/: main.rs
2021/day08/: Cargo.toml
2021/day08/src/: main.rs
2021/day09/: Cargo.toml
2021/day09/src/: main.rs
2021/day10/: Cargo.toml
2021/day10/src/: main.rs
2021/day11/: Cargo.toml
2021/day11/src/: main.rs
2021/day12/: Cargo.toml
2021/day12/src/: main.rs
2021/day13/: Cargo.toml
2021/day13/src/: main.rs
2021/day14/: Cargo.toml
2021/day14/src/: main.rs
2021/day15/: Cargo.toml
2021/day15/src/: main.rs
2021/day16/: Cargo.toml
2021/day16/src/: main.rs
2021/day17/: Cargo.toml
2021/day17/src/: main.rs
2021/day18/: Cargo.toml
2021/day18/src/: main.rs
2021/day19/: Cargo.toml
2021/day19/src/: main.rs
2021/day20/: Cargo.toml
2021/day20/src/: main.rs
2021/day21/: Cargo.toml
2021/day21/src/: main.rs
2021/day22/: Cargo.toml
2021/day22/src/: main.rs
2021/day23/: Cargo.toml
2021/day23/src/: main.rs
2021/day24/: Cargo.toml
2021/day24/src/: main.rs
2021/day25/: Cargo.toml
2021/day25/src/: main.rs
2022/: Cargo.toml
2022/aoc_utils/: Cargo.toml
2022/day08/: Cargo.toml
2022/day09/: sol.py
2022/day11/: Cargo.toml
2022/day12/: Cargo.toml
2023/: Cargo.toml
2024/: Cargo.toml
2025/: Cargo.toml  README.md
snippets/: snippets.md
(+84 files in other folders)
