[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"
[[bin]]
name = "day07"
path = "src/bin/day07.rs"

[[bin]]
name = "day08"
path = "src/bin/day08.rs"

[[bin]]
name = "day17"
path = "src/bin/day17.rs"

[[bin]]
name = "day09"
path = "src/bin/day09.rs"
