[workspace]
resolver = "2"
members = [
    "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14", "day15",
    # Add future day directories here as you create them
    # "day02",
    # "day03",
    # etc.
]

# Shared dependencies across all workspace members
[workspace.dependencies]
# Common dependencies for Advent of Code problems
regex = "1.10"
itertools = "0.12"
anyhow = "1.0"

# Shared configuration for all workspace members
[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
